# cpp-video-editor

./: .gitignore  CMakeLists.txt  README.md  cpp-video-editor.cpp  cpp-video-editor.h
